[package]
name = "hbm"
description = "A hardware buffer allocator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ash = { workspace = true, optional = true }
bitflags.workspace = true
drm = { workspace = true, optional = true }
log.workspace = true
nix.workspace = true
thiserror.workspace = true

[dev-dependencies]
drm-fourcc.workspace = true
env_logger.workspace = true

[features]
default = ["ash", "drm"]
ash = ["dep:ash"]
drm = ["dep:drm"]

[lints]
workspace = true
